--- a/index/style.css
+++ b/index/style.css
@@ -82,8 +82,7 @@ nav a:hover{
     font-weight: 500;
     transition: background-color 0.2s ease;
     cursor: pointer;
-    height: 3rem;
-    display: flex;
+}
 
 .btn-signing:hover{
     background-color: white;
@@ -187,4 +186,69 @@ main{
 
 .btn-singing-main:hover{
     background-color: gray;
+}
+
+.robot-3d{
+    position: absolute;
+    top: 0;
+    right: -20%;
+}
+
+/* REPONSIVE */
+/* TABLET */
+@media (max-width:1300px) {
+    header{
+        padding: 1rem 0.5rem;
+    }        
+    .content{
+        margin-top: 85%;
+    }
+    .robot-3d{
+        scale: 0.8;
+        top: -20%;
+        right: 2%;
+    }
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+    header{
+        padding: 1rem 0.5rem;
+    }
+    nav{
+        display: none;
+    }
+    header h1{
+        font-size: 2rem;
+    }
+    .btn-signing{
+        padding: 0.6rem 1.5rem;
+    }
+    .content{
+        margin-top: 25rem;
+        max-width: 30rem;
+        margin-left: 10%;
+    }
+    .robot-3d{
+        scale: 0.5;
+        top: -25%;
+        right: 0;
+    }
+    .tag-box{
+        width: 12rem;
+    }
+    .content h1{
+        font-size: 2.5rem;
+    }
+    .description{
+        font-size: 1rem;
+    }
+    .btn-get-started{
+        font-size: 0.8rem;
+        padding: 0.5rem 1.2rem;
+    }
+    .btn-signing-main{
+        font-size: 0.8rem;
+        padding: 0.8rem 2rem;
+    }
 }
